[package]
name = "tun-tap-stuff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base-encode = "0.3.1"
clap = { version = "4.2.2", features = ["derive"] }
libc = "0.2.141"
rand = "0.8.5"
tun-tap = { version = "0.1.3", default-features = false }
